add more explanation to README, and add values.rating.rate to script

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <tr>
                 <th>Title</th>
                 <th>Description</th>
+                <th>Rating</th>
                 <th>Price</th>
                 <th>Image</th>
             </tr>
